tests/SyntaxError/Test1/test10.c
int main(){

int a=5;

5*2+3;

return a;

}
